--- a/rezume-master/index.html
+++ b/rezume-master/index.html
@@ -49,7 +49,7 @@
 				<div class="col-md-10 text-center pt-5">
 
 					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Oyindamola Shakirat Erikitola</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Rezume</strong>
+					<strong class="d-block text-white text-uppercase letter-spacing">I'M A WEB DEVELOPER!</strong>
 
 				</div>
 			</div>
