--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Rezume Free Template by Colorlib</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="fonts/icomoon/style.css">
+	<link rel="stylesheet" href="/animate.css">
+	<link rel="stylesheet" href="/flexslider.css">
+	<link rel="stylesheet" href="/style.css">
 
 	<link rel="stylesheet" href="/bootstrap.css">
 	<link rel="stylesheet" href="/style.css">
