changed navbar background to reveal text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar section begins -->
 
     <nav
-      class="navbar navbar-expand-lg site-navbar navbar-light bg-light"
+      class="navbar navbar-expand-lg site-navbar navbar-light bg-dark"
       id="pb-navbar"
     >
       <div class="container">
